# mle_training

./: .dockerignore  .gitignore  Dockerfile  README.md  commands.sh  env.yml  nonstandardcode.py  pyproject.toml  setup.py
deploy/conda/: env.yml
docs/source/: conf.py  modules.rst
mlflow/: ingest_data.py  main.py  score.py  train.py
mlflow/mlruns/0/: meta.yaml
mlflow/mlruns/0/0253b042f0964c768b2e95eb9f8f7ba9/: meta.yaml
mlflow/mlruns/0/117b61126b5641328509c35b6fa5eb3a/: meta.yaml
mlflow/mlruns/0/170812773ae543fb8d0fdd1005329cc4/: meta.yaml
mlflow/mlruns/0/1993f9aae7b34d1c8c268aab74f9f3dd/: meta.yaml
mlflow/mlruns/0/29b21be445174e0fa7b4a1ff7121b063/: meta.yaml
mlflow/mlruns/0/3c607085f9234fc8af5015f2c28b7119/: meta.yaml
mlflow/mlruns/0/4d7f88fa22b44773ab88a00539af6024/: meta.yaml
mlflow/mlruns/0/5bd49c6e858741e7b671669b9fda20af/: meta.yaml
mlflow/mlruns/0/6e32265e9296425d8c5fb9ea92dbc5d6/: meta.yaml
mlflow/mlruns/0/6e95113ff3e444dabbcc043e734839ce/: meta.yaml
mlflow/mlruns/0/706a6e23f12742e89269377a9c6480f2/: meta.yaml
mlflow/mlruns/0/722a3dfd8c6a4a0082a2778d0aa833a5/: meta.yaml
mlflow/mlruns/0/7d4048bfc736488fb458e8191f844f0a/: meta.yaml
mlflow/mlruns/0/9493962bb8c943228337fda91fb34a21/: meta.yaml
mlflow/mlruns/0/95754b0e3a97437e8d6336bd63a3b5b6/: meta.yaml
notebook/: exercise1.ipynb  exercise2.ipynb  exercise3.ipynb
outputs/: scores.txt
src/HousePricePrediction/: logger.py
tests/functional_test/: test_installtion.py
tests/unit_test/: test_ingest_data.py  test_train.py
(+53 files in other folders)
